Added new sermon, sermon0, also made some css changes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 
     <section class="two">
         <div class="actual-posts">
+            <a href="sermons/sermon0.html">Offering Praise by Faith</a>
+
+            <div class="about">
+                <p>Pst. Tolu Otegbade|  Heb 11:4 | 04 June 2023 </p>
+                </div>
+
+            <div class="data">
+                <p class="datap">
+                    In life, everything is connected and has a foundation. This includes praise,
+                     which can be successful or fail depending on how it is given. Effective praise is grounded in a focus on God, 
+                    who is the foundation it should stand on. To offer excellent praise, it must be
+                     rooted in faith, which is based on love...............
+                </p>
+                
+            </div>
+
+            <hr>
+
+
             <a href="sermons/sermon1.html">Thou Shall Conceive</a>
 
             <div class="about">
