--- a/index.html
+++ b/index.html
@@ -117,5 +117,8 @@
 
         
     </section>
+    <a title="Google Analytics Alternative" href="https://clicky.com/101412980"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101412980" src="//static.getclicky.com/js"></script>
+
 </body>
 </html>
