updated 2nd July

--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
 
     <section class="two">
         <div class="actual-posts">
+
+            <a href="sermons/sermonA.html">Raising our Tempo of Praise</a>
+
+            <div class="about">
+                <p>Pst. Tolu Otegbade|  Psalm 71:6 | 02 July 2023 </p>
+                </div>
+
+            <div class="data">
+                <p class="datap">
+                    In his sermon, Pastor Tolu Otegbade speaks on the topic of 
+                    "Raising our Tempo of Praise". He emphasizes that increasing the intensity of our 
+                    praise to God leads to greater victories. He reminds believers not to
+                     lessen their praise in times of hardship, but rather, consciously remember 
+                     God's manifold blessings...............
+                </p>
+                
+            </div>
+
+            <hr>
+
+
+
+
+
+
+
+
+
             <a href="sermons/sermon0.html">Offering Praise by Faith</a>
 
             <div class="about">
@@ -48,8 +76,10 @@
             <div class="data">
                 <p class="datap">
                     In the realm of faith, we believe that God has a unique plan for each person.
-                     He sends messages to guide us towards greatness, presenting us with customized blessings tailored to meet our 
-                     individual needs. However, many blessings go unclaimed, often because
+                     He sends messages to guide us towards greatness, presenting 
+                     us with customized blessings tailored to meet our 
+                     individual needs. However, many blessings go unclaimed, 
+                     often because
                      we are not present or attentive enough to recognize.......
                 </p>
                 
