--- a/index.html
+++ b/index.html
@@ -21,6 +21,30 @@
     <section class="two">
         <div class="actual-posts">
 
+            <a href="sermons/sermonB.html">Divine Help Guarantees Rest</a>
+
+            <div class="about">
+                <p>Pst. Tolu Otegbade| 09 July 2023 </p>
+                </div>
+
+            <div class="data">
+                <p class="datap">
+                    The sermon discusses the concept of Divine Help, 
+                    stating that man is truly at peace when God grants him rest. 
+                    The speaker highlights that divine help, a crucial need for everyone at some point in life, 
+                    could involve guidance along a specific path, arriving always at the right time...............
+                </p>
+                
+            </div>
+
+            <hr>
+
+
+
+
+
+
+
             <a href="sermons/sermonA.html">Raising our Tempo of Praise</a>
 
             <div class="about">
